--- a/.github/workflows/Build-KernelSU-next.yml
+++ b/.github/workflows/Build-KernelSU-next.yml
@@ -112,6 +112,13 @@ jobs:
           cp ../kernel_patches/next/syscall_hooks.patch ./
           patch -p1 --fuzz=3 < ./syscall_hooks.patch
 
+      - name: Apply Hide Stuff Patches
+        run: |
+          echo "Changing to configuration directory: $CONFIG..."
+          cd "$CONFIG"
+          cp ../../kernel_patches/69_hide_stuff.patch ./
+          patch -p1 -F 3 < 69_hide_stuff.patch
+
       - name: Add SUSFS Configuration Settings
         run: |
           cd "$CONFIG"
