--- a/.github/workflows/Build-KernelSU-next.yml
+++ b/.github/workflows/Build-KernelSU-next.yml
@@ -116,7 +116,7 @@ jobs:
         run: |
           echo "Changing to configuration directory: $CONFIG..."
           cd "$CONFIG"
-          cp ../../kernel_patches/69_hide_stuff.patch ./
+          cp ../kernel_patches/69_hide_stuff.patch ./
           patch -p1 -F 3 < 69_hide_stuff.patch
 
       - name: Add SUSFS Configuration Settings
